got rid of jekyll stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,50 +1,4 @@
-# Jekyll #
-###################
-_site/
-.sass-cache/
-.jekyll-metadata
-vendor/
-
-# Sass #
-###################
-/.yardoc
-/coverage
-/doc
-/pkg
-/test/rails
-/.sass-cache
-/.haml
-/.sass
-/site
-*.rbc
-/.sass
-*.lock
-
-# Compiled source #
-###################
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip
-# Logs and databases #
-######################
-*.log
-*.sql
-*.sqlite
+.vscode/
 # OS generated files #
 ######################
 .DS_Store
