--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "eleventy --serve & npx tailwindcss -i styles/tailwind.css -c styles/tailwind.config.js -o _site/style.css --watch",
+    "build": "ELEVENTY_PRODUCTION=true eleventy && NODE_ENV=production npx tailwindcss -i styles/tailwind.css -c styles/tailwind.config.js -o _site/style.css --minify"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,10 @@
     "url": "https://github.com/karlyanelson/karlyanelson.github.io/issues"
   },
   "homepage": "https://github.com/karlyanelson/karlyanelson.github.io#readme",
-  "dependencies": {
-    "connect": "^3.7.0",
-    "node-fetch": "^2.6.7",
-    "serve-static": "^1.15.0"
+  "devDependencies": {
+    "@11ty/eleventy": "^1.0.0",
+    "alpinejs": "^3.7.0",
+    "html-minifier": "^4.0.0",
+    "tailwindcss": "^3.0.0"
   }
 }
