--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/karlyanelson/karlyanelson.github.io#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.0",
+    "@11ty/eleventy": "^2.0.0",
     "alpinejs": "^3.7.0",
     "html-minifier": "^4.0.0",
     "tailwindcss": "^3.0.0"
+  },
+  "dependencies": {
+    "node-fetch": "^3.3.1"
   }
 }
