--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@11ty/eleventy": "^2.0.1",
     "alpinejs": "^3.14.1",
     "html-minifier-terser": "^7.2.0",
+    "markdown-it": "^14.1.0",
+    "markdown-it-anchor": "^9.2.0",
     "tailwindcss": "^3.4.12"
   },
   "dependencies": {
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+    "eleventy-plugin-toc": "^1.1.5",
     "node-fetch": "^2.6.1"
   }
 }
