--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "eleventy --serve & npx tailwindcss -i styles/tailwind.css -c styles/tailwind.config.js -o _site/style.css --watch",
-    "build": "ELEVENTY_PRODUCTION=true eleventy && NODE_ENV=production npx tailwindcss -i styles/tailwind.css -c styles/tailwind.config.js -o _site/style.css --minify"
+    "build": "ELEVENTY_PRODUCTION=true eleventy && NODE_ENV=production && npx tailwindcss -i styles/tailwind.css -c styles/tailwind.config.js -o _site/style.css --minify && npm run create-search-index ",
+    "create-search-index": "npx pagefind --site \"_site\""
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "html-minifier-terser": "^7.2.0",
     "markdown-it": "^14.1.0",
     "markdown-it-anchor": "^9.2.0",
+    "pagefind": "^1.1.1",
     "tailwindcss": "^3.4.12"
   },
   "dependencies": {
